--- a/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
+++ b/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
@@ -1,1 +1,22 @@
-.socialPostCard {}
+.socialPostCard {
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+
+    .socialPostCardHead {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .socialPostCardHeadTitle {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        h3 {
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
