--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,1 +1,20 @@
 @import './normalize.css';
+
+body {
+    background-color: #edeef0;
+}
+
+.container {
+    @include container;
+}
+
+.pageWrapper {
+    display: flex;
+    gap: 10px;
+}
+
+.navigation {
+    min-width: 200px;
+    background-color: white;
+    border-radius: 10px;
+}
