--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
 @import './normalize.css';
 
 body {
-    background-color: #edeef0;
+    background-color: $backgroundColor;
 }
 
 .container {
@@ -13,8 +13,7 @@ body {
     gap: 10px;
 }
 
-.navigation {
-    min-width: 200px;
-    background-color: white;
-    border-radius: 10px;
+a {
+    text-decoration: none;
+    color: $textColor;
 }
