--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,5 +1,10 @@
 @use "sass:math";
 
+$textColor: #000;
+$linkColor: #2b5885;
+$backgroundColor: #edeef0;
+$accentColor: #dcdcdc;
+
 @mixin container {
     width: 100%;
     max-width: 1200px;
