--- a/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
+++ b/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
@@ -1,7 +1,7 @@
 .socialPostCard {
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
+    background-color: $blockColor;
+    border-radius: $halfBigBlockRadius;
+    padding: 20px;
 
     .socialPostCardHead {
         display: flex;
