--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,10 +2,16 @@
 
 body {
     background-color: $backgroundColor;
+    font-family: var(--inter-font);
 }
 
 .container {
     @include container;
+}
+
+.content {
+    display: flex;
+    width: 100%;
 }
 
 .pageWrapper {
