--- a/components/common/SideNavigation/SideNavigation.module.scss
+++ b/components/common/SideNavigation/SideNavigation.module.scss
@@ -13,6 +13,19 @@
     &:hover {
         background-color: $accentColor;
     }
+
+    .linkNotification {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: auto;
+        background-color: $accentColor;
+        font-weight: bold;
+        border-radius: 100%;
+        font-size: 10px;
+        width: 20px;
+        height: 20px;
+    }
 }
 
 .sideNavigationIcon {
