--- a/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
+++ b/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
@@ -7,6 +7,17 @@
         display: flex;
         align-items: center;
         gap: 10px;
+
+        a {
+            margin: 0;
+            padding: 0;
+            font-weight: bold;
+            transition: opacity .3s;
+
+            &:hover {
+                opacity: .66;
+            }
+        }
     }
 
     .socialPostCardHeadTitle {
@@ -14,9 +25,9 @@
         flex-direction: column;
         gap: 5px;
 
-        h3 {
-            margin: 0;
-            padding: 0;
+        data {
+            color: $accentColor;
+            font-size: 14px;
         }
     }
 }
