--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -14,11 +14,20 @@ $blockColor: white;
 
 //
 $mobilePadding: 15px;
+$blockPadding: 15px;
 
 @mixin container {
     width: 100%;
     max-width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: $mobilePadding;
+    padding-right: $mobilePadding;
     margin: auto;
+}
+
+@mixin block {
+    display: flex;
+    // min-height: 300px;
+    background-color: $blockColor;
+    padding: $blockPadding;
+    border-radius: $halfBigBlockRadius;
 }
