--- a/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
+++ b/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
@@ -11,8 +11,8 @@
         a {
             margin: 0;
             padding: 0;
-            font-weight: bold;
             transition: opacity .3s;
+            color: $linkColor;
 
             &:hover {
                 opacity: .66;
@@ -28,6 +28,34 @@
         data {
             color: $accentColor;
             font-size: 14px;
+        }
+    }
+
+    .socialPostCardBottom {
+        display: flex;
+        justify-content: flex-end;
+        gap: 20px;
+
+        .socialPostActions {
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+
+            button {
+                display: flex;
+                flex-direction: row;
+                margin: 0;
+                padding: 0;
+                align-items: center;
+                width: fit-content;
+                color: $accentColor;
+
+                &:hover {
+                    color: $linkColor;
+                }
+
+                .likeCount {}
+            }
         }
     }
 }
