--- a/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
+++ b/modules/SocialPosts/SocialPostCard/SocialPostCard.module.scss
@@ -56,6 +56,10 @@
 
                 .likeCount {}
             }
+
+            .liked {
+                color: red;
+            }
         }
     }
 }
