--- a/modules/Chat/MyMessages/MyMessages.module.scss
+++ b/modules/Chat/MyMessages/MyMessages.module.scss
@@ -2,5 +2,85 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  background-color: $blockColor;
+  border-left: 1px solid rgb(220 220 220 / 42%);
+}
+
+.chatPanel {
+  padding: 26px;
+  border-bottom: 1px solid rgb(220 220 220 / 42%);
+}
+
+.chat {
+  padding: 26px;
+  flex-grow: 1;
+  align-items: flex-end;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 100%;
+}
+
+.sendButton {
+  display: flex;
+  margin-top: auto;
+  width: 100%;
+  padding: 20px 20px;
+  border-top: 1px solid $accentColor;
+}
+
+.chatMessages {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: fit-content;
+}
+
+.chatMessage {
+  margin: 20px 0px;
+  max-width: 70%;
+  display: flex;
+  gap: 10px;
+  align-items: flex-end;
+}
+
+.chatMessageBubble {
+  display: flex;
+  padding: 15px;
+  border-radius: 20px;
+}
+
+.enemyChatMessage {
+  margin: 20px auto 20px 0px;
+
+  .chatMessageBubble {
+    background-color: $backgroundColor;
+  }
+}
+
+.userChatMessage {
+  color: $inversedTextColor;
+  flex-direction: row-reverse;
+
+  .chatMessageBubble {
+    background-color: #2b5885;
+  }
+}
+
+.userChatAvatar {
+  position: relative;
+  min-width: 40px;
+  min-height: 40px;
+  max-width: 40px;
+  max-height: 40px;
+
+  img {
+    object-fit: cover;
+  }
 }
