--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,44 +1,47 @@
 @import './normalize.css';
 
 * {
-    box-sizing: border-box;
-    font-family: var(--gilroy-font);
+  box-sizing: border-box;
+  font-family: var(--gilroy-font);
 
-    &:focus-visible {
-        // outline: 1px solid $primary;
-    }
+  &:focus-visible {
+    // outline: 1px solid $primary;
+  }
 }
 
 html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
-
 body {
-    background-color: $backgroundColor;
-    font-family: var(--inter-font);
+  background-color: $backgroundColor;
+  font-family: var(--inter-font);
 }
 
 .main {
-    min-height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
-    @include container;
+  @include container;
 }
 
 .content {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
 }
 
 .pageWrapper {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
+  flex-grow: 1;
+  padding-bottom: 20px;
 }
 
 a {
-    text-decoration: none;
-    color: $textColor;
+  text-decoration: none;
+  color: $textColor;
 }
