--- a/modules/Chat/ChatMessage/ChatMessage.module.scss
+++ b/modules/Chat/ChatMessage/ChatMessage.module.scss
@@ -1,9 +1,22 @@
+@keyframes chatMessageFadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .chatMessage {
+  opacity: 1;
   margin: 20px 0px;
   max-width: 70%;
   display: flex;
   gap: 10px;
   align-items: flex-end;
+  animation-name: chatMessageFadeIn;
+  animation-duration: 1s;
+  animation-direction: normal;
 }
 
 .chatMessageBubble {
@@ -20,7 +33,7 @@
 
   .chatMessageBubble {
     background-color: $backgroundColor;
-    border-radius: 20px 20px 20px 0px;
+    border-radius: 10px 10px 10px 0px;
 
     .messageCorner {
       left: -8px;
@@ -37,7 +50,7 @@
 
   .chatMessageBubble {
     background-color: #2b5885;
-    border-radius: 20px 20px 0px 20px;
+    border-radius: 10px 10px 0px 10px;
     .messageCorner {
       right: -8px;
       bottom: 0;
