--- a/modules/Chat/MyMessages/MyMessages.module.scss
+++ b/modules/Chat/MyMessages/MyMessages.module.scss
@@ -4,6 +4,8 @@
   flex-direction: column;
   background-color: $blockColor;
   border-left: 1px solid rgb(220 220 220 / 42%);
+  height: 100%;
+  overflow: hidden;
 }
 
 .chatPanel {
@@ -12,14 +14,14 @@
 }
 
 .chat {
-  padding: 26px;
+  padding: 0px 26px;
   flex-grow: 1;
   align-items: flex-end;
   justify-content: flex-end;
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 100%;
+  height: 30%;
 }
 
 .sendButton {
@@ -28,6 +30,13 @@
   width: 100%;
   padding: 20px 20px;
   border-top: 1px solid $accentColor;
+  gap: 5px;
+}
+
+.chatMessagesContainer {
+  overflow-y: scroll;
+  width: 100%;
+  @include noscrollbar;
 }
 
 .chatMessages {
