--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,4 +1,4 @@
-@use "sass:math";
+@use 'sass:math';
 
 $inversedTextColor: #fff;
 $textColor: #000;
@@ -10,7 +10,6 @@ $bigBlockRadius: 60px;
 $halfBigBlockRadius: 30px;
 $blockColor: white;
 
-
 $boxShadow: 0px 9px 15px -10px black;
 
 //
@@ -18,24 +17,33 @@ $mobilePadding: 15px;
 $blockPadding: 15px;
 
 @mixin container {
-    width: 100%;
-    max-width: 1200px;
-    padding-left: $mobilePadding;
-    padding-right: $mobilePadding;
-    margin: auto;
+  width: 100%;
+  max-width: 1200px;
+  padding-left: $mobilePadding;
+  padding-right: $mobilePadding;
+  margin: auto;
+}
+
+@mixin noscrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @mixin block {
-    display: flex;
-    // min-height: 300px;
-    background-color: $blockColor;
-    padding: $blockPadding;
-    border-radius: $halfBigBlockRadius;
+  display: flex;
+  // min-height: 300px;
+  background-color: $blockColor;
+  padding: $blockPadding;
+  border-radius: $halfBigBlockRadius;
 }
 
 @mixin overImageButton {
-    color: $inversedTextColor;
-    background-color: rgba(0, 0, 0, .5);
-    border-radius: $blockRadius;
-    font-weight: bold;
+  color: $inversedTextColor;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: $blockRadius;
+  font-weight: bold;
 }
