--- a/modules/SocialPosts/SocialPostsList/SocialPostsList.module.scss
+++ b/modules/SocialPosts/SocialPostsList/SocialPostsList.module.scss
@@ -1,5 +1,6 @@
 .socialPostsList {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-grow: 1;
 }
