--- a/modules/Chat/MyMessages/MyMessages.module.scss
+++ b/modules/Chat/MyMessages/MyMessages.module.scss
@@ -11,6 +11,9 @@
 .chatPanel {
   padding: 26px;
   border-bottom: 1px solid rgb(220 220 220 / 42%);
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
 }
 
 .chat {
