--- a/modules/Chat/MyMessages/MyMessages.module.scss
+++ b/modules/Chat/MyMessages/MyMessages.module.scss
@@ -11,13 +11,19 @@
 .chatPanel {
   padding: 26px;
   border-bottom: 1px solid rgb(220 220 220 / 42%);
-  justify-content: space-between;
   display: flex;
+  flex-grow: 1;
   align-items: center;
+  max-height: 85px;
+  gap: 15px;
+
+  .loadingIcon {
+    margin-left: auto;
+  }
 }
 
 .chat {
-  padding: 0px 26px;
+  padding: 0px 26px 0px 26px;
   flex-grow: 1;
   align-items: flex-end;
   justify-content: flex-end;
@@ -45,54 +51,11 @@
 .chatMessages {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0px 0px 20px 0px;
   width: 100%;
   align-items: flex-end;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   height: fit-content;
-}
-
-.chatMessage {
-  margin: 20px 0px;
-  max-width: 70%;
-  display: flex;
-  gap: 10px;
-  align-items: flex-end;
-}
-
-.chatMessageBubble {
-  display: flex;
-  padding: 15px;
-  border-radius: 20px;
-}
-
-.enemyChatMessage {
-  margin: 20px auto 20px 0px;
-
-  .chatMessageBubble {
-    background-color: $backgroundColor;
-  }
-}
-
-.userChatMessage {
-  color: $inversedTextColor;
-  flex-direction: row-reverse;
-
-  .chatMessageBubble {
-    background-color: #2b5885;
-  }
-}
-
-.userChatAvatar {
-  position: relative;
-  min-width: 40px;
-  min-height: 40px;
-  max-width: 40px;
-  max-height: 40px;
-
-  img {
-    object-fit: cover;
-  }
 }
