--- a/modules/Chat/ChatMessage/ChatMessage.module.scss
+++ b/modules/Chat/ChatMessage/ChatMessage.module.scss
@@ -11,6 +11,7 @@
   opacity: 1;
   margin: 5px 0px;
   max-width: 70%;
+  word-break: break-all;
   display: flex;
   gap: 10px;
   align-items: flex-end;
